rough account overview and buy page

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -14,9 +14,20 @@
                     <th>Shares</th>
                     <th>Price</th>
                     <th>Total</th>
-
                 </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td>Cash</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        {{ cash }}
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </main>
+    <div>{{ user }}</div>
 {% endblock %}
