--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/quote" method="post">
+    <form action="/buy" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="stock" placeholder="Symbol" type="text">
             <input autocomplete="off" autofocus class="form-control" name="shares" placeholder="Shares" type="number">
