buy function checks cash and updates balances

--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -6,6 +6,7 @@
 
 {% block main %}
     <main class="container p-5">
+        <h3>Your Account History</h3>
         <table class="table">
             <thead>
                 <tr>
