added grand total in balances

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -29,6 +29,11 @@
                     <td></td>
                     <td>{{ availableCash }}</td>
                 </tr>
+                <tr>
+                    <td>Grand Total :)</td>
+                    <td></td>
+                    <td>{{ grandTotal }}</td>
+                </tr>
             </tbody>
         </table>
     </main>
