--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Buy some stock!
+    Sell! Sell!
 {% endblock %}
 
 {% block main %}
-    <form action="/buy" method="post">
+    <form action="/sell" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="stock" placeholder="Symbol" type="text">
             <input autocomplete="off" autofocus class="form-control" name="shares" placeholder="Shares" type="number">
-        <button class="btn btn-primary" type="submit">Buy</button>
+        <button class="btn btn-primary" type="submit">Sell</button>
     </form>
 {% endblock %}
